Fix auth layout issues

--- a/browser-client/src/features/auth/AuthForm.module.css
+++ b/browser-client/src/features/auth/AuthForm.module.css
@@ -14,13 +14,18 @@
   box-shadow: 2px 2px 3px #eeeeee;
 }
 
+.form h2 {
+  margin-top: 0;
+}
+
 .label {
   float: left;
   margin-bottom: 10px;
 }
 
 .button {
-  margin-top: 30px;
+  margin-top: 20px;
+  margin-bottom: 10px;
   height: 35px;
   width: 100%;
   float: right;
